# rc-switch

./: .gitignore  .travis.yml  Makefile  Maplin-RC-sockets  RCSwitch.cpp  RCSwitch.h  README.md  library.json  library.properties  platformio.ini  platformio_shared.ini  rctest.cpp  rts.c  switch.sh
branches/quigg_test/: RCSwitch.cpp  RCSwitch.h
branches/raspberry-quigg/: CMakeLists.txt  RCSwitch.cpp  RCSwitch.h
branches/string2chararray/: RCSwitch.cpp  RCSwitch.h
examples/: platformio.ini
examples/Hyttevokteren/: Hyttevokteren.ino
examples/ReceiveDemo/: ReceiveDemo.pde
examples/ReceiveDemo_Advanced/: ReceiveDemo_Advanced.ino  ReceiveDemo_Advanced.pde  helperfunctions.ino  output.ino
examples/ReceiveDemo_Simple/: ReceiveDemo_Simple.ino  ReceiveDemo_Simple.pde
examples/SendDemo/: SendDemo.pde
examples/TypeA_WithDIPSwitches/: TypeA_WithDIPSwitches.pde
examples/TypeA_WithDIPSwitches_Lightweight/: TypeA_WithDIPSwitches_Lightweight.ino
examples/TypeC_Intertechno/: TypeC_Intertechno.pde
examples/TypeD_REV/: TypeD_REV.ino
examples/Webserver/: Webserver.pde
examples/WithDIPSwitches_HX2262/: WithDIPSwitches_HX2262.pde
src/: RCSwitch.cpp  RCSwitch.h
tags/v0.6/: RCSwitch.h  (+1 more)
trunk/: RCSwitch.cpp  RCSwitch.h
wiki/: 0TableOfContents.wiki  Forum.wiki  HowTo_HackRemoteControl.wiki  HowTo_Install.wiki  HowTo_OperateLowCostOutlets.wiki  HowTo_Receive.wiki  HowTo_Send.wiki  HowTo_UseTheLibary.wiki  KnowHow_LineCoding.wiki  KnowHow_LineEncoding.wiki  List_KnownDevices.wiki  List_OtherProjects.wiki  List_TransmitterReceiverModules.wiki  Project_Tomat3007.wiki
(+43 files in other folders)
